* unit test: Add unit tests for #10150, no patch needed because issue is already resolved. [jddalton] 

* Fix Element read/write attribute methods for the 'encType' form attribute in IE. Closes #11126. [kangax, NoiseEee]

* Element#down on an input element should not raise error. Closes #11102. [humeniuc, kangax]

* Make Function#argumentNames handle multiple spaces and line breaks between arguments. [#63 state:resolved] [Geoff M. Granum, Tobie Langel]

* Speed up Function#argumentNames. Avoid Enum dependency. [Samuel Lebeau, Tobie Langel]

* unit test: Amended failing Element#identify test. [Andrew Dupont, jddalton]

* Fix an issue with calling Event.pointer before the DOM is loaded. [kangax, jddalton] [#4 state:resolved]

* Account for context to assure Element#down, et al., work properly with Selectors API. [Andrew Dupont]

* Fix issue where Safari improperly reports an element as a descendant of itself. [Andrew Dupont]

* Greatly simplify IE's implementation of Element#descendantOf. [Andrew Dupont]

* Prevent exception when using Selector to search for an attribute that is not present. Closes #11395. [gryn, Andrew Dupont]

* Fix Firefox Event.element() returning the wrong node for image onload/onerror events.
  Also fixe Event.element() exception in IE when called from a window event observer. Closes #8652, #11296, #11259.  [dcrall, jddalton, kangax]

* Fix issue where Safari 3 deletes custom properties from the document object when the page is returned to via the back button. Closes #11430. [mzsanford, kangax, Andrew Dupont]

* Integrate support for the W3C Selectors API into the Selector class.
  Will now use the API when possible (browser supports the API *and* recognizes the given selector).
  Means minor changes to the semantics of :enabled, :disabled, and :empty in order to comply with CSS spec. [#1 state:resolved] [Andrew Dupont]

* Avoid re-extending element in Element#getDimensions. [kangax]
