@@ -1,3 +1,5 @@
+* Fix Element#getStyle returns null if value is "auto" in browsers supporting getComputedStyle(). Closes #10116. [kangax, ylucas]
+
 * unit test: Add unit tests for #10150, no patch needed because issue is already resolved. [jddalton] 
 
 * Fix Element read/write attribute methods for the 'encType' form attribute in IE. Closes #11126. [kangax, NoiseEee]
